--- a/src/css/UserImageEditModal.css
+++ b/src/css/UserImageEditModal.css
@@ -1,4 +1,4 @@
-.user-image-edit-popup-overlay {
+.user-image-modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -11,10 +11,12 @@
   z-index: 1000;
 }
 
-.user-image-edit-popup-modal {
+.user-image-modal-modal {
   background: white;
-  padding: 2rem;
-  border-radius: 1rem;
+  padding: 1.5rem;
+  /* 24px */
+  border-radius: 0.5rem;
+  /* 8px */
   width: 90%;
   max-width: 500px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
@@ -23,83 +25,95 @@
   flex-direction: column;
 }
 
-.user-image-edit-popup-title {
+.user-image-modal-title {
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.125rem;
+  /* 18px */
   font-weight: bold;
-  margin-bottom: 1.5rem;
-  color: #111827;
+  margin-bottom: 1rem;
+  /* 16px */
+  color: #1f2937;
+  /* text-gray-800 */
 }
 
-.user-image-edit-popup-crop-container {
+.user-image-modal-crop-container {
   position: relative;
   width: 100%;
-  height: 300px;
+  height: 16rem;
+  /* 256px */
   background: #f3f4f6;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
+  /* 8px */
   overflow: hidden;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
+  /* 16px */
   border: 2px dashed #d1d5db;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.user-image-edit-popup-actions {
+.user-image-modal-actions {
   display: flex;
   justify-content: flex-end;
-  gap: 1rem;
-  margin-top: 1rem;
+  gap: 0.5rem;
+  /* 8px */
+  margin-top: 1.5rem;
+  /* 24px */
 }
 
-.user-image-edit-popup-button {
+.user-image-modal-button {
   padding: 0.5rem 1.25rem;
+  /* 8px 20px */
   font-weight: 500;
   border-radius: 0.5rem;
+  /* 8px */
   border: none;
   cursor: pointer;
   font-size: 1rem;
+  /* 16px */
   transition: background-color 0.3s ease;
 }
 
-.user-image-edit-popup-button.save {
+.user-image-modal-button.save {
   background-color: #3b82f6;
   color: white;
 }
 
-.user-image-edit-popup-button.save:hover {
+.user-image-modal-button.save:hover {
   background-color: #2563eb;
 }
 
-.user-image-edit-popup-button.cancel {
+.user-image-modal-button.cancel {
   background-color: #e5e7eb;
-  color: #111827;
+  color: #1f2937;
 }
 
-.user-image-edit-popup-button.cancel:hover {
-  background-color: #d1d5db;;
+.user-image-modal-button.cancel:hover {
+  background-color: #d1d5db;
 }
 
 /* Beautify the image input */
-.user-image-edit-file-input {
+.user-image-modal-file-input {
   display: none;
 }
 
-.user-image-edit-file-label {
+.user-image-modal-file-label {
   display: inline-block;
   padding: 0.5rem 1rem;
-  background-color: #333;
+  /* 8px 16px */
+  background-color: #3b82f6;
   color: white;
   border-radius: 0.5rem;
+  /* 8px */
   font-weight: 500;
   cursor: pointer;
   transition: background-color 0.3s ease;
   margin-top: 1rem;
+  /* 16px */
   text-align: center;
 }
 
-.user-image-edit-file-label:hover {
-  background-color: #8b8b8b;
+.user-image-modal-file-label:hover {
+  background-color: #2563eb;
 }
-
-
