--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -264,7 +264,7 @@
       list-style-type: none;
       color: rgb(0, 0, 0);
       font-size: large;
-      
+      position: relative;
       text-align: center;
       justify-content: center;
       transition: background-color 0.3s, color 0.3s, box-shadow 0.3s ease-in-out;
